# quantedge

./: README.md  api.py  backtesting.py  buy_strategies.py  data_fetcher.py  database.py  hello.py  indicators.py  main.py  pyproject.toml  response.json  rules copy.json  rules.json  setup.py  tqqq_btal_vix.json  trading_system.py  update_prices.py  utils.py
DPU/: Dockerfile  requirements.txt  update_prices.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: BacktestForm.tsx  LoadStrategyModal.tsx  Modal.tsx  Portal.tsx  RuleBuilder.tsx  RuleTypeMenu.tsx  Toast.tsx
quantedge/: backtesting.py  data_fetcher.py  indicators.py  main.py  trading_system.py  transaction_types.py
tests/: test_data_fetcher.py  test_indicators.py
website/: index.html  script.js  styles.css
